[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sheet7-pipeline"
version = "0.1.0"
description = "TAG Sheet 7 public-disclosures pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "edgartools>=2.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
]

[project.optional-dependencies]
classifiers = [
  "sentence-transformers>=3.0",
  "transformers>=4.41",
  "torch>=2.3",
]
sheets = [
  "google-api-python-client>=2.130",
  "google-auth>=2.29",
]
dev = [
  "pytest>=8.2",
]

[project.scripts]
sheet7 = "sheet7_pipeline.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/sheet7_pipeline"]

